--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ crossterm = { version = "0.28.1", features = ["event-stream"] }
 futures = "0.3.31"
 ratatui = "0.29.0"
 tokio = { version = "1.40.0", features = ["full"] }
+strum = { version = "0.26", features = ["derive"] }
