--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ futures = "0.3.31"
 ratatui = "0.29.0"
 tokio = { version = "1.40.0", features = ["full"] }
 strum = { version = "0.26", features = ["derive"] }
+itertools = "0.13.0"
